# NYAN

./: .gitignore  CMakeLists.txt  README.md
doc/: getting_started.md
include/: Util  VulkanRenderer  local.cmake
include/Core/: Application.h  Input.h  Settings.h
include/FBXReader/: FBXReader.h
include/GLFWWrapper/: Error.hpp  Library.hpp  Monitor.hpp  Window.hpp  glfwIncludes.h  glfwWrapper.h
include/GLTFReader/: GLTFReader.hpp
include/Geometry/: Model.h  Transform.h
include/LinAlg/: LinAlg.h  Matrix.h  Quaternion.h  Util.h  Vector.h
include/Math/: Constants.h  LinAlg.h  Matrix.h  Quaternion.h  Util.h  Vector.h
include/Renderer/: Camera.h  CameraController.h  DDGIManager.h  DDGIRenderer.h  DataManager.h  DeferredLighting.h  ImguiRenderer.h  Light.h  Material.h  MaterialManager.h  Mesh.h  MeshLoader.h  MeshManager.h  MeshRenderer.h  Profiler.hpp  RenderGraph.h  RenderManager.h  Renderer.h  RendererError.hpp  ShaderInterface.h  ShaderManager.h  Skeleton.h  TextureManager.h  Transform.h  VulkanRenderer.hpp
include/Utility/: Bits.h  BucketList.h  Color.h  DDSReader.h  DynamicBitset.h  Exceptions.h  FBXReader.h  Hash.h  HashMap.h  ImageReader.h  Log.h  Pool.h  UID.h  Utility.h
include/VulkanWrapper/: AccelerationStructure.h  Allocator.h  Allocator.hpp  Buffer.h  CommandBuffer.h  CommandPool.h  DebugLabels.h  DeletionQueue.hpp  DescriptorPool.hpp  DescriptorSet.h  DeviceWrapper.hpp  Error.hpp  Framebuffer.h  Image.h  Instance.h  LogicalDevice.h  Manager.h  MaxVals.h  PhysicalDevice.hpp  Pipeline.h  Pipeline.hpp  PipelineCache.hpp  PipelineConfig.h  QueryPool.hpp  Queue.hpp  RayTracePipeline.h  Renderpass.h  Sampler.h  Sampler.hpp  Shader.h  Surface.hpp  Swapchain.h  Swapchain.hpp  Utility.h  VkWrapper.h  VulkanError.hpp  VulkanForwards.h  VulkanIncludes.h  VulkanObject.h  WindowSystemInterface.h
samples/: CMakeLists.txt
samples/Headless/: CMakeLists.txt  Headless.cpp
samples/MinimalSwapchain/: CMakeLists.txt  MinimalSwapchain.cpp
samples/MinimalSwapchain/shader/: CMakeLists.txt  triangle_test.vert
samples/RendererUsage/: CMakeLists.txt  RendererUsage.cpp
samples/RendererUsage/shader/: CMakeLists.txt  triangle_test.frag
shader/: CMakeLists.txt  basic.frag  basic.vert  bindlessLayouts.glsl  bufferReferences.glsl  common.glsl  composite.frag  default.frag  defaultNormal.frag  defaultTangent.frag  deferred.frag  deferredLighting.frag  deferredPBR.frag  deferredTangent.frag  deferredTangentAlphaDiscard.frag  descriptors.h  extracts.glsl  formats.h  forwardTangent.frag  fullscreen.frag  fullscreen.vert  imgui.frag  imgui.vert  lighting.glsl  local.cmake  moments.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_alpha_test.rahit  raytrace_deferred.rgen  raytrace_shadows.rmiss  rayvertex.glsl  shaderStructs.glsl  simple.frag  skinned.vert  static.vert  staticTangent.frag  staticTangent.vert  (+3 more)
shader/DDGI/: ddgi_common.glsl  ddgi_gather.comp  ddgi_prefix_sum.comp  ddgi_relocate.comp  ddgi_restir.comp  ddgi_restir_common.glsl  ddgi_sampling.glsl  ddgi_sum.comp  ddgi_visualizer.frag  ddgi_visualizer.vert  raytrace_DDGI.rchit  raytrace_DDGI.rgen  raytrace_DDGI.rmiss  raytrace_lighting.glsl  update_DDGI.comp  update_DDGI_borders.comp
shader/DDGIReSTIR/: ddgi_restir_common.glsl  ddgi_restir_raytrace.rchit  ddgi_restir_raytrace.rgen  ddgi_restir_raytrace.rmiss  ddgi_restir_sample.glsl  ddgi_restir_sample_generation.rgen  ddgi_restir_sample_validation.rgen  ddgi_restir_shade.comp  ddgi_restir_spatial_reuse.comp  ddgi_restir_update.comp
shader/common/: bindlessLayouts.glsl  bufferReferences.glsl  common.glsl  debug.glsl  extracts.glsl  gbuffer.glsl  hash.glsl  lighting.glsl  moments.glsl  multiscaleMeanEstimator.glsl  packing.glsl  raycommon.glsl  raytrace_lighting.glsl
shader/include/: ddgi_push_constants.h  ddgi_restir_push_constants.h  descriptors.h  formats.h  structs.h
shader/tmp/: DDGIVolume_generateRays.comp  deep_utils.glsl  prefix.comp
src/: CMakeLists.txt  DDGITest.cpp  Demo.cpp  Demo_two.cpp  FBXTest.cpp  GLTFTest.cpp  HeadlessTest.cpp  HybridTest.cpp  Main.cpp  RTTest.cpp  SwapchainTest.cpp  local.cmake
src/Core/: Application.cpp  Application.cpp~RF213abece.TMP  Input.cpp  Settings.cpp
src/FBXReader/: FBXReader.cpp
src/GLFW/: Allocator.cppm  CMakeLists.txt  Error.cppm  Library.cppm  ModuleSettings.cppm  Monitor.cppm  Window.cppm  Wrapper.cppm
src/GLFWWrapper/: Error.cpp  Library.cpp  Monitor.cpp  Window.cpp
src/GLTFReader/: GLTFReader.cpp
src/Math/: Matrix.cpp  Vector.cpp
src/Renderer/: CameraController.cpp  DDGIManager.cpp  DDGIRenderer.cpp  DataManager.cpp  DeferredLighting.cpp  ImguiRenderer.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  MeshLoader.cpp  MeshManager.cpp  MeshRenderer.cpp  Profiler.cpp  RenderManager.cpp  Renderer.cpp  (+6 more)
src/SDL/: CMakeLists.txt  Library.cppm  ModuleSettings.cppm  Wrapper.cppm
src/VulkanRenderer/Renderer/: CMakeLists.txt  Error.cppm  Error.ixx  Graph.cppm  ModuleSettings.cppm  PipelineBuilder.cppm  RenderView.cppm  Renderer.cpp  Renderer.cppm  Renderer.ixx  Resources.cpp  Resources.cppm  Settings.cpp  Settings.cppm  Settings.ixx  VulkanRenderer.ixx  WSI.cpp  WSI.cppm
src/VulkanRenderer/Renderer/shaders/: CMakeLists.txt  test2.comp
src/VulkanRenderer/Wrapper/: AccelerationStructure.cpp  AccelerationStructure.cppm  AccelerationStructure.ixx  Allocator.cpp  Allocator.cppm  Allocator.ixx  Buffer.cpp  Buffer.cppm  Buffer.ixx  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.cppm  CommandBuffer.ixx  CommandPool.cpp  CommandPool.cppm  CommandPool.ixx  Common.cppm  DeletionQueue.cpp  DeletionQueue.cppm  DeletionQueue.ixx  DescriptorPool.cpp  DescriptorPool.cppm  DescriptorPool.ixx  DescriptorSet.cpp  DescriptorSet.cppm  DescriptorSet.ixx  DescriptorSetLayout.cpp  DescriptorSetLayout.cppm  DescriptorSetLayout.ixx  Error.cppm  Error.ixx  Fence.cpp  Fence.cppm  Fence.ixx  Formats.cppm  Formats.ixx  Framebuffer.cpp  Framebuffer.cppm  Image.cpp  Image.cppm  (+49 more)
test/: LinAlgTests.cpp  UtilityTests.cpp  local.cmake
tests/: CMakeLists.txt  UtilityTests.cpp  local.cmake
(+48 files in other folders)
